--- a/arkfuture/html/irc.html
+++ b/arkfuture/html/irc.html
@@ -1227,7 +1227,7 @@
 
 		const iframeRegex = /\[ifr\](https?:\/\/[^\s<>{}|\\^`[\]]+?)\[\/ifr\]/gi;
 		let processedText = text.replace(iframeRegex, function (match, url) {
-			return `<iframe src="${HTML_escape_attr(url)}" style="width:100%; height:300px; border:1px solid var(--clr-border); border-radius:6px; margin:6px 0;"></iframe>`;
+			return `<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="${HTML_escape_attr(url)}"></iframe>`;	
 		});
 
 		const urlRegex = /(https?:\/\/[^\s<>{}|\\^`[\]]+)/g;
