--- a/arkfuture/html/irc.html
+++ b/arkfuture/html/irc.html
@@ -751,12 +751,8 @@
 	var reconnectAttempts = 0;
 	var maxReconnectAttempts = 5;
 	var reconnectDelay = 3000;
-
-	// === 保活机制增强 ===
 	var keepAliveTimer = null;
-	var pongTimeoutId = null;
-	const keepAliveInterval = 45000; // 45秒发送一次 PING
-	const pongTimeout = 10000;       // 10秒内必须收到 PONG
+	const keepAliveInterval = 90000; // 60秒保活功能
 
 	function onLoad() {
 		channels = document.getElementById("channelsContainer");
@@ -774,6 +770,7 @@
 		}
 		updateConnectionStatus(false);
 
+		// 添加输入框自动聚焦
 		if (input) {
 			input.addEventListener('blur', () => setTimeout(() => input.focus(), 100));
 		}
@@ -814,16 +811,16 @@
 	}
 
 	function writeToLog(message) {
-		const logOutput = document.getElementById('logOutput');
-		const timestamp = new Date().toLocaleTimeString('zh-CN', { hour12: false });
-		const fullMessage = `[${timestamp}] ${message}`;
+	const logOutput = document.getElementById('logOutput');
+	const timestamp = new Date().toLocaleTimeString('zh-CN', { hour12: false });
+	const fullMessage = `[${timestamp}] ${message}`;
 
-		if (logOutput) {
-			logOutput.textContent += fullMessage + '\n';
-			logOutput.scrollTop = logOutput.scrollHeight;
-		}
+	if (logOutput) {
+		logOutput.textContent += fullMessage + '\n';
+		logOutput.scrollTop = logOutput.scrollHeight;
+	}
 
-		console.log(fullMessage);
+	console.log(fullMessage);
 	}
 
 	function showSSLWarning(url) {
@@ -911,10 +908,12 @@
 		connectBtn.textContent = '连接中...';
 		connectBtn.disabled = true;
 
+		// 清空界面
 		channels.innerHTML = '';
 		channelContents.innerHTML = '';
 		channelMap.clear();
 
+		// 显示聊天区域
 		contentsWrapper.classList.remove('hidden');
 		contentsWrapper.classList.add('visible');
 		if (emptyState) emptyState.style.display = 'none';
@@ -947,6 +946,7 @@
 
 		updateConnectionStatus(false);
 
+		// 隐藏聊天区域
 		contentsWrapper.classList.remove('visible');
 		contentsWrapper.classList.add('hidden');
 		if (emptyState) emptyState.style.display = 'flex';
@@ -1009,6 +1009,7 @@
 			channel.channel.classList.add('active');
 			channel.button.classList.add("active");
 			activeChannel = channel;
+			// 自动滚动到底部
 			setTimeout(() => {
 				if (channel.content) {
 					channel.content.scrollTop = channel.content.scrollHeight;
@@ -1216,37 +1217,40 @@
 			while (output.children.length > 200) {
 				output.removeChild(output.children[0]);
 			}
+			// 保持滚动在底部
 			requestAnimationFrame(() => {
 				output.scrollTop = output.scrollHeight;
 			});
 		}
 	}
 
-	function linkify(text) {
-		if (!text) return "";
-		const urlRegex = /(https?:\/\/[^\s<>{}|\\^`[\]]+)/g;
-		return text.replace(urlRegex, function (url) {
-			const lowerUrl = url.toLowerCase();
-			const isImage = /\.(jpg|jpeg|png|gif|webp|bmp|svg)(\?.*)?$/i.test(lowerUrl);
-			const isAudio = /\.(mp3|wav|ogg|aac|m4a|flac)(\?.*)?$/i.test(lowerUrl);
-			const isVideo = /\.(mp4|webm|ogg|mov|avi|mkv|flv|m4v|m3u8)(\?.*)?$/i.test(lowerUrl);
+function linkify(text) {
+	const urlRegex = /(https?:\/\/[^\s<>{}|\\^`[\]]+)/g;
 
-			if (isImage) {
-				return `<img src="${HTML_escape_attr(url)}" alt="图片" style="max-width: 100%; height: auto; border-radius: 4px; margin: 4px 0;">`;
-			} else if (isAudio) {
-				return `<audio controls src="${HTML_escape_attr(url)}" style="width: 100%; margin: 4px 0;"></audio>`;
-			} else if (isVideo) {
-				return `<video controls src="${HTML_escape_attr(url)}" style="max-width: 100%; height: auto; border-radius: 4px; margin: 4px 0;"></video>`;
-			} else {
-				return `<a href="${HTML_escape_attr(url)}" target="_blank" rel="noopener noreferrer" style="color: var(--clr-accent); text-decoration: underline; word-break: break-all;">${HTML_escape(url)}</a>`;
-			}
-		});
-	}
+	return text.replace(urlRegex, function (url) {
+		// 尝试判断是否为媒体链接
+		const lowerUrl = url.toLowerCase();
+		const isImage = /\.(jpg|jpeg|png|gif|webp|bmp|svg)(\?.*)?$/i.test(lowerUrl);
+		const isAudio = /\.(mp3|wav|ogg|aac|m4a|flac)(\?.*)?$/i.test(lowerUrl);
+		const isVideo = /\.(mp4|webm|ogg|mov|avi|mkv|flv|m4v|m3u8)(\?.*)?$/i.test(lowerUrl);
 
-	function HTML_escape_attr(str) {
-		if (!str) return "";
-		return str.replace(/"/g, '&quot;').replace(/'/g, '&#039;').replace(/</g, '&lt;').replace(/>/g, '&gt;').replace(/&/g, '&amp;');
-	}
+		if (isImage) {
+			return `<img src="${HTML_escape_attr(url)}" alt="图片" style="max-width: 100%; height: auto; border-radius: 4px; margin: 4px 0;">`;
+		} else if (isAudio) {
+			return `<audio controls src="${HTML_escape_attr(url)}" style="width: 100%; margin: 4px 0;"></audio>`;
+		} else if (isVideo) {
+			return `<video controls src="${HTML_escape_attr(url)}" style="max-width: 100%; height: auto; border-radius: 4px; margin: 4px 0;"></video>`;
+		} else {
+			// 普通链接
+			return `<a href="${HTML_escape_attr(url)}" target="_blank" rel="noopener noreferrer" style="color: var(--clr-accent); text-decoration: underline; word-break: break-all;">${HTML_escape(url)}</a>`;
+		}
+	});
+}
+
+function HTML_escape_attr(str) {
+	if (!str) return "";
+	return str.replace(/"/g, '&quot;').replace(/'/g, '&#039;').replace(/</g, '&lt;').replace(/>/g, '&gt;').replace(/&/g, '&amp;');
+}
 
 	function send() {
 		let text = input ? input.value.trim() : "";
@@ -1411,21 +1415,6 @@
 			process(rawData);
 		}
 	}
-
-	function setupScrollIndicator(contentEl) {
-  const indicator = document.createElement('div');
-  indicator.className = 'scroll-indicator';
-  indicator.textContent = '↓ 滚动到底部';
-  indicator.onclick = () => contentEl.scrollTop = contentEl.scrollHeight;
-  contentEl.parentNode.appendChild(indicator);
-
-  let isAtBottom = true;
-  contentEl.addEventListener('scroll', () => {
-    const diff = contentEl.scrollHeight - contentEl.scrollTop - contentEl.clientHeight;
-    isAtBottom = diff < 10;
-    indicator.classList.toggle('visible', !isAtBottom);
-  });
-}
 
 	function handleBinaryInput(event) {
 		if (!event || !event.target) return;
@@ -1707,36 +1696,16 @@
 			writeToLog(`[ERROR] ${rawData}`);
 			return;
 		}
-		// 检查是否是服务器的 PONG 回复
-		if (data[0] === "PONG") {
-			if (pongTimeoutId) {
-				clearTimeout(pongTimeoutId);
-				pongTimeoutId = null;
-				writeToLog("[KEEP-ALIVE] 收到 PONG,连接正常");
-			}
-			return;
-		}
 		console.log("DEBUG:", rawData);
 		writeToLog(`[DEBUG] ${rawData}`);
 	}
 
-	// === 增强的保活机制 ===
 	function startKeepAlive() {
 		stopKeepAlive();
 		keepAliveTimer = setInterval(() => {
 			if (isConnected && websocket && websocket.readyState === WebSocket.OPEN) {
-				// 发送带时间戳的 PING,以便区分
-				const timestamp = Date.now();
-				writeToLog(`[KEEP-ALIVE] 发送 PING ${timestamp}`);
-				doSend(`PING ${timestamp}`);
-
-				// 设置超时检测
-				pongTimeoutId = setTimeout(() => {
-					writeToLog(`[KEEP-ALIVE] 未在 ${pongTimeout / 1000} 秒内收到 PONG,连接可能已断开`);
-					if (websocket) {
-						websocket.close(1006, "Keep-alive timeout");
-					}
-				}, pongTimeout);
+				writeToLog("[KEEP-ALIVE] 发送 PING");
+				doSend("PING keepalive");
 			}
 		}, keepAliveInterval);
 	}
@@ -1745,10 +1714,6 @@
 		if (keepAliveTimer) {
 			clearInterval(keepAliveTimer);
 			keepAliveTimer = null;
-		}
-		if (pongTimeoutId) {
-			clearTimeout(pongTimeoutId);
-			pongTimeoutId = null;
 		}
 	}
 </script>
