--- a/arkfuture/html/irc.html
+++ b/arkfuture/html/irc.html
@@ -1235,21 +1235,15 @@
 
 
 			if (isImage) {
-				return `<img src="${HTML_escape_attr(url)}" alt="图片" style="max-width: 100%; height: auto; border-radius: 4px; margin: 4px 0;">`;
+				return `<img src="${url}" alt="图片" style="max-width: 100%; height: auto; border-radius: 4px; margin: 4px 0;">`;
 			} else if (isAudio) {
-				return `<audio controls src="${HTML_escape_attr(url)}" style="width: 100%; margin: 4px 0;"></audio>`;
+				return `<audio controls src="${url}" style="width: 100%; margin: 4px 0;"></audio>`;
 			} else if (isVideo) {
-				return `<video controls src="${HTML_escape_attr(url)}" style="max-width: 100%; height: auto; border-radius: 4px; margin: 4px 0;"></video>`;
+				return `<video controls src="${url}" style="max-width: 100%; height: auto; border-radius: 4px; margin: 4px 0;"></video>`;
 			} else {
-				return `<a href="${HTML_escape_attr(url)}" target="_blank" rel="noopener noreferrer" style="color: var(--clr-accent); text-decoration: underline; word-break: break-all;">${HTML_escape(url)}</a>`;
+				return `<a href="${url}" target="_blank" rel="noopener noreferrer" style="color: var(--clr-accent); text-decoration: underline; word-break: break-all;">${HTML_escape(url)}</a>`;
 			}
 		});
-	}
-
-	function HTML_escape_attr(str) {
-		if (!str) return "";
-		return str.replace(/"/g, '&quot;').replace(/'/g, '&#039;').replace(/</g, '&lt;').replace(/>/g, '&gt;').replace(/&/g, '&amp;');
-
 	}
 
 	function send() {
