--- a/arkfuture/html/irc.html
+++ b/arkfuture/html/irc.html
@@ -752,7 +752,7 @@
 	var maxReconnectAttempts = 5;
 	var reconnectDelay = 3000;
 	var keepAliveTimer = null;
-	const keepAliveInterval = 90000; // 60秒保活功能
+	const keepAliveInterval = 90000;
 
 	function onLoad() {
 		channels = document.getElementById("channelsContainer");
