--- a/arkfuture/html/fl.html
+++ b/arkfuture/html/fl.html
@@ -93,13 +93,13 @@
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
     <br>
-    <form method="GET" action="https://skullxdcc.com/" target="_blank">
-        <input type="text" name="" size="30" autocomplete="off" placeholder="skull 搜索">
+    <form method="GET" action="https://skullxdcc.com/ws.php" target="_blank">
+        <input type="text" name="sterm" size="30" autocomplete="off" placeholder="skull 搜索 原始数据">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
     <br>
-    <form method="GET" action="https://www.xdcc.rocks/" target="_blank">
-        <input type="text" name="" size="30" autocomplete="off" placeholder="xdcc.rocks 搜索">
+    <form method="GET" action="https://www.xdcc.rocks/search/" target="_blank">
+        <input type="text" name="searchword" size="30" autocomplete="off" placeholder="xdcc.rocks 搜索 原始数据">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
     <br>
