--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div>
             <h2 class="title2" id="RSS">电台 | RADIO</h2>
             <ul>
-                <li><a id="radiourl" href="http://frp.freefrp.net:10242">RadioURL</a></li>
+                <li><a id="radiourl" href="radio.arkfuture.top:5080">RadioURL</a></li>
             </ul>
         </div>
         <br>
