--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div>
             <h2 class="title2" id="irc">irc聊天 | IRC</h2>
             <ul>
-                <li><p>将客户端连接到: <a id="ircurl" href="IRC.ARKFUTURE.TOP">IRC.ARKFUTURE.TOP</a></p></li>
+                <li><p>将客户端连接到: <a id="ircurl" href="irc://IRC.ARKFUTURE.TOP">IRC.ARKFUTURE.TOP</a></p></li>
                 <li><p>IRC协议端口为:6667,6668,6669/6697(TLS)</p></li>
                 <li><p><a href="/arkfuture/html/irc.html">网页客户端</a></p></li>
                 <li><p>关于IRC相关的知识 您可以了解: https://netsplit.de/ 和 https://www.geekshed.net</p></li>
@@ -66,7 +66,7 @@
         <div>
             <h2 class="title2" id="RSS">电台 | RADIO</h2>
             <ul>
-                <li><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=298 height=52 src="http://radio.arkfuture.top:5080/1"></iframe></li>
+                <li><a id="ircurl" href="http://radio.arkfuture.top:5080/1"></a>radio.arkfuture.top:5080/1</li>
             </ul>
         </div>
         <br>
