--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div>
             <h2 class="title2" id="RSS">电台 | RADIO</h2>
             <ul>
-                <li><a id="ircurl" href="http://radio.arkfuture.top:5080/1"></a>radio.arkfuture.top:5080/1</li>
+                <li><a href="http://radio.arkfuture.top:5080/1">radio.arkfuture.top:5080/1</a></li>
             </ul>
         </div>
         <br>
