--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
             <p>这不是一堆法律术语,但它们是关于什么是允许的指导方针</p>
             <p>也欢迎加入我们的聊天室进行交流讨论</p>
             <ul>
-                <li><a href="https://t.me/arkfuture_studio2">Telegram: arkfuture_studio2</a></li>
+                <li><a href="//t.me/arkfuture_studio2">Telegram: arkfuture_studio2</a></li>
                 <li><a href="#irc">IRC: #arkfuture_studio</a></li>
-                <li><a href="ircs://irc.libera.chat/#arkfuture_studio">LiberaChat: #arkfuture_studio</a></li>
             </ul>
         </div>
     </div>
@@ -46,27 +45,30 @@
         <div>
             <h2 class="title2" id="repo">资源库及知识库 | Repo</h2>
             <ul>
-                <li><a href="https://github.com/ARKFUTURE">Github</a></li>
-                <li><a href="https://gitea.com/ARKFUTURE">Gitea</a></li>
-                <li><a href="https://gitlab.com/ARKFUTURE">Gitlab</a></li>
+                <li><a href="//github.com/ARKFUTURE">Github</a></li>
+                <li><a href="//gitea.com/ARKFUTURE">Gitea</a></li>
+                <li><a href="//gitlab.com/ARKFUTURE">Gitlab</a></li>
             </ul>
         </div>
         <br>
         <div>
             <h2 class="title2" id="irc">irc聊天 | IRC</h2>
             <ul>
+                <li><h3 style="color: rgb(26, 98, 252);">ARKFUTURE irc</h3></li>
                 <li><p>将客户端连接到: <a id="ircurl" href="irc://IRC.ARKFUTURE.TOP">IRC.ARKFUTURE.TOP</a></p></li>
-                <li><p>IRC协议端口为:6667,6668,6669/6697(TLS)</p></li>
                 <li><p><a href="/arkfuture/html/irc.html">网页客户端</a></p></li>
-                <li><p>关于IRC相关的知识 您可以了解: https://netsplit.de/ 和 https://www.geekshed.net</p></li>
-                <li><p>我们为什么要使用IRC: 因为它快速 轻量 独立服务器 易扩展 等优点, 是一个稳定的协议</p></li>
+                <li><h3  style="color: rgb(26, 98, 252);">LiberaChat irc</h3></li>
+                <li><p>将客户端连接到: <a id="ircurl" href="irc://IRC.LIBERA.CHAT">IRC.LIBERA.CHAT</a></p></li>
+                <br>
+                <li><p>频道名: #arkfuture_studio</p></li>
+                <li><p>关于IRC相关的知识 您可以了解: netsplit.de 和 geekshed.net</p></li>
             </ul>
         </div>
         <br>
         <div>
             <h2 class="title2" id="RSS">电台 | RADIO</h2>
             <ul>
-                <li><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=298 height=52 src="http://radio.arkfuture.top:5080/1"></iframe></li>
+                <li><a href="//radio.arkfuture.top:5080/1">RADIO.ARKFUTURE.TOP</a></li>
             </ul>
         </div>
         <br>
@@ -88,23 +90,6 @@
                 <li><iframe src="/arkfuture/html/zj.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Embedded Widget"></iframe></li>
             </ul>
         </div>
-        <br>
-        <div>
-            <h2 class="title2">更多服务请加入我们的内部社群</h2>
-        </div>
-    </div>
-
-    <br>
-    <hr>
-
-    <div>
-        <h1 class="title" id="so">社交 | Social</h1>
-        <ul>
-            <li><a href="https://cn.gravatar.com/arkfuturesec">Gravatar(Link Tree)</a></li>
-            <li><a href="https://x.com/arkfuturestudio">X</a></li>
-            <li><a href="https://www.facebook.com/ARKFUTURE">FACEBOOK</a></li>
-            <li><a href="https://infosec.exchange/@arkfuture">Mastodon</a></li>
-        </ul>
     </div>
 
     <br>
@@ -113,10 +98,10 @@
     <div>
         <h1 class="title" id="li">许可证 | Licenses</h1>
         <ul>
-            <li><a href="https://www.gnu.org/licenses/">GNU开源许可</a></li>
-            <li><a href="https://creativecommons.org/licenses/">CC知识许可</a></li>
-            <li><a href="https://www.apache.org/licenses/">Apache开源许可</a></li>
-            <li><a href="https://www.mozilla.org/en-US/MPL/">MPL开源许可</a></li>
+            <li><a href="//www.gnu.org/licenses/">GNU开源许可</a></li>
+            <li><a href="//creativecommons.org/licenses/">CC知识许可</a></li>
+            <li><a href="//www.apache.org/licenses/">Apache开源许可</a></li>
+            <li><a href="//www.mozilla.org/en-US/MPL/">MPL开源许可</a></li>
         </ul>
         <p>除了以上许可证,其他许可证我们也在使用, 因为篇幅, 我们不再写其他的了</p>
     </div>
@@ -155,8 +140,8 @@
 <!-- ARKFUTURE 标准 footer -->
 <footer>
     <div style="text-align: center;">
-        <p>方舟未来 | 方舟未来工作室(集团) | 方舟安全实验室</p>
-        <p>Copyright © 2020-∞ <a href="">ARKFUTURE</a> | <a href="">ARKFUTURE STUDIO(GROUP)</a> | <a href="">ARK SRCURITY LAB</a>. All rights reserved.</p>
+        <p>方舟未来 | 方舟未来工作室/集团/团队 | 方舟实验室</p>
+        <p>Copyright © 2020-∞ <a href="">ARKFUTURE</a> | <a href="">ARKFUTURE STUDIO/GROUP/TEAM</a> | <a href="">ARK LAB</a>. All rights reserved.</p>
         <p>All trademarks and resources are the property of their respective owners.</p>
         <p>----ALL by ARKFUTURE Management and Operation Working Group</p>
     </div>
@@ -168,8 +153,8 @@
 <!--
 Thanks:
 ARKFUTURE team/group/studio and Friends
-INSPIRCD https://www.inspircd.org/
-XiehJ https://hwkj.top/
+INSPIRCD //www.inspircd.org/
+XiehJ //hwkj.top/
 In the same way, I would like to thank my dearest Ms.Zhang..
 -->
 
