--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <p>这不是一堆法律术语,但它们是关于什么是允许的指导方针</p>
             <p>也欢迎加入我们的聊天室进行交流讨论</p>
             <ul>
-                <li><a href="//t.me/arkfuture_studio2">Telegram: arkfuture_studio2</a></li>
+                <li><a href="//t.me/arkfuture_studio">Telegram: arkfuture_studio</a></li>
                 <li><a href="#irc">IRC: #arkfuture_studio</a></li>
             </ul>
         </div>
