--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <ul>
                 <li><h3 style="color: rgb(26, 98, 252);">ARKFUTURE irc</h3></li>
                 <li><p>将客户端连接到: <a id="ircurl" href="irc://IRC.ARKFUTURE.TOP">IRC.ARKFUTURE.TOP</a></p></li>
-                <li><p><a href="/arkfuture/html/irc.html">网页客户端</a></p></li>
+                <!-- <li><p><a href="/arkfuture/html/irc.html">网页客户端</a></p></li> -->
                 <li><h3  style="color: rgb(26, 98, 252);">LiberaChat irc</h3></li>
                 <li><p>将客户端连接到: <a id="ircurl" href="irc://IRC.LIBERA.CHAT">IRC.LIBERA.CHAT</a></p></li>
                 <br>
@@ -137,11 +137,11 @@
 </body>
 <br>
 
-<!-- ARKFUTURE 标准 footer -->
+<!-- footer -->
 <footer>
     <div style="text-align: center;">
         <p>方舟未来 | 方舟未来工作室/集团/团队 | 方舟实验室</p>
-        <p>Copyright © 2020-∞ <a href="">ARKFUTURE</a> | <a href="">ARKFUTURE STUDIO/GROUP/TEAM</a> | <a href="">ARK LAB</a>. All rights reserved.</p>
+        <p>Copyright © 2020-∞ <a href="/index.html">ARKFUTURE</a> | <a href="/arkfuturestudio.html">ARKFUTURE STUDIO/GROUP/TEAM</a> | <a href="/arklab.html">ARK LAB</a>. All rights reserved.</p>
         <p>All trademarks and resources are the property of their respective owners.</p>
         <p>----ALL by ARKFUTURE Management and Operation Working Group</p>
     </div>
