--- a/arklab.html
+++ b/arklab.html
@@ -29,7 +29,7 @@
 <footer>
     <div style="text-align: center;">
         <p>方舟未来 | 方舟未来工作室/集团/团队 | 方舟实验室</p>
-        <p>Copyright © 2020-∞ <a href="">ARKFUTURE</a> | <a href="">ARKFUTURE STUDIO/GROUP/TEAM</a> | <a href="">ARK LAB</a>. All rights reserved.</p>
+        <p>Copyright © 2020-∞ <a href="/index.html">ARKFUTURE</a> | <a href="/arkfuturestudio.html">ARKFUTURE STUDIO/GROUP/TEAM</a> | <a href="/arklab.html">ARK LAB</a>. All rights reserved.</p>
         <p>All trademarks and resources are the property of their respective owners.</p>
         <p>----ALL by ARKFUTURE Management and Operation Working Group</p>
     </div>
