--- a/arkfuture/html/fl.html
+++ b/arkfuture/html/fl.html
@@ -8,10 +8,11 @@
 </head>
 <!--------------------> 
 <body>
-<h2>快速搜索</h2>
+<!-- 搜索 -->
+<h1>快速搜索---</h1>
 <p>使用方法:把搜索内容/参数放到框里，点击搜索按钮即可</p>
 <p>注意: 新增连接 搜索参数失效 联系邮箱:pbp9wdep2@mozmail.com</p>
-<br>
+
 <h2>搜索引擎</h2>
     <form method="GET" action="https://www.baidu.com/s" target="_blank">
         <input type="text" name="wd" size="30" autocomplete="off" placeholder="百度/Baidu">
@@ -182,5 +183,49 @@
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
+<br>
+<br>
+<hr>
+<!-- 链接 -->
+<h1 class="tit">常用连接---</h1>
+        <p>这个条目是展示一些链接,这些链接为随时随地使用而准备</p>
+        <p>这些链接都是公开的,展示链接不代表我们跟某个团体或公司合作</p>
+        <p>请右击->复制链接, 然后粘贴使用</p>
+
+        <div>
+            <h2>OS</h2>
+            <a href="https://parrotsec.org">ParrotSec</a><br>
+            <a href="https://blackarch.org">BlackArch</a><br>
+            <a href="https://www.debian.org">Debian</a><br>
+            <a href="https://www.openmediavault.org">OpenMediaVault</a><br>
+            <a href="https://openwrt.org">OpenWrt</a>
+            <a href="https://firmware-selector.immortalwrt.org">ImmortalWrt</a>
+            <a href="https://uupdump.net">UUP dump</a><br>
+        </div>
+        <br>
+        <div>
+            <h2>NTP</h2>
+            <a href="ntp.ntsc.ac.cn">国家授时中心 NTP 服务器</a><br>
+            <a href="cn.ntp.org.cn">中国 NTP 快速授时服务</a><br>
+            <a href="edu.ntp.org.cn">中国教育网专用NTP</a>
+        </div>
+        <br>
+        <div>
+            <h2>Tracker</h2>
+            <a href="http://opentrackr.org">OPENTRACKER</a><br>
+            <a href="https://trackerslist.com">TRACKERSLIST</a>
+        </div>
+        <br>
+        <div>
+            <h2>DNS</h2>
+            <p>DoT(DNS over TLS)</p>
+            <a href="dns.alidns.com">阿里云 DoT</a><br>
+            <a href="dot.pub">腾讯云 DoT</a><br>
+            <a href="1dot1dot1dot1.cloudflare-dns.com">Cloudflare DoT</a><br>
+            <p>DoH(DNS Over HTTPS)</p>
+            <a href="https://1.0.0.1/dns-query">Cloudflare DoH</a><br>
+            <a href="https://doh.opendns.com/dns-query">Opendns DoH</a>
+        </div>
+    </div>
 </body>
 </html>
