--- a/index.html
+++ b/index.html
@@ -84,9 +84,8 @@
         <div>
             <h2 class="title2">小组件 | Widgets</h2>
             <ul>
-                <li><a href="/arkfuture/html/fl.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="快速链接">快速搜索</a></li>
-                <li><a href="/arkfuture/html/link.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Link">常用链接</a></li>
-                <li><a href="/arkfuture/html/conf.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Link">配置文件连接</a></li>
+                <li><a href="/arkfuture/html/fl.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="快速链接">快速搜索/常用链接</a></li>
+                <li><a href="/arkfuture/html/conf.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Link">配置文件</a></li>
                 <li><iframe src="/arkfuture/html/zj.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Embedded Widget"></iframe></li>
             </ul>
         </div>
