--- a/arkfuture/html/fl.html
+++ b/arkfuture/html/fl.html
@@ -104,6 +104,11 @@
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
     <br>
+        <form method="GET" action="https://xdcc-search.com" target="_blank">
+        <input type="text" name="q" size="30" autocomplete="off" placeholder="xdcc-search 搜索">
+        <input type="submit" value="搜索"><i><--点击</i>
+    </form>
+    <br>
 
 <p>软件包搜索</p>
     <form method="GET" action="https://repology.org/projects/" target="_blank">
