--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <ul>
                 <li><h3 style="color: rgb(26, 98, 252);">ARKFUTURE irc</h3></li>
                 <li><p>将客户端连接到: <a id="ircurl" href="irc://IRC.ARKFUTURE.TOP">IRC.ARKFUTURE.TOP</a></p></li>
-                <!-- <li><p><a href="/arkfuture/html/irc.html">网页客户端</a></p></li> -->
+                <li><p><a href="/arkfuture/html/irc.html">ARKFUTURE irc 网页客户端</a></p></li>
                 <li><h3  style="color: rgb(26, 98, 252);">LiberaChat irc</h3></li>
                 <li><p>将客户端连接到: <a id="ircurl" href="irc://IRC.LIBERA.CHAT">IRC.LIBERA.CHAT</a></p></li>
                 <br>
