--- a/arkfuture/html/irc.html
+++ b/arkfuture/html/irc.html
@@ -1041,7 +1041,7 @@
 				</div>
 				<div class="settings-group">
 					<label>频道:</label>
-					<input type="text" id="channelInput" value="#lobby" placeholder="#channe">
+					<input type="text" id="channelInput" value="#arkfuture_studio" placeholder="#channe">
 				</div>
 				<!-- 隐藏的自动重连复选框, 保持功能性 -->
 				<input type="checkbox" id="autoReconnect" style="display: none;">
