--- a/arkfuture/html/irc.html
+++ b/arkfuture/html/irc.html
@@ -1056,7 +1056,7 @@
 		</div>
 
 		<div class="ssl-warning" id="sslWarning">
-			<strong>⚠️ 浏览器无法忽略SSL证书错误!</strong> 请使用以下方案: <br>
+			<strong>浏览器无法忽略SSL证书错误!</strong> 请使用以下方案: <br>
 			1. 改用 <code>ws://</code> 非加密连接(如果浏览器支持)<br>
 			2. 在浏览器中访问 <a id="sslLink" target="_blank">服务器URL</a> 并手动信任证书<br>
 		</div>
